# livecap

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  VERIFY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.host.json  vite.host.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/livecap-core/: Cargo.toml
crates/livecap-core/examples/: live_caption.rs
crates/livecap-core/src/: debug_dump.rs  error.rs  event.rs  lib.rs  model.rs  pipeline.rs  resample.rs  suppression.rs  vad.rs
crates/livecap-core/src/audio/: device.rs  mic.rs  mod.rs  system.rs
crates/livecap-core/src/whisper/: acceleration.rs  engine.rs  mod.rs
crates/livecap-core/tests/: bleed_acceptance_wav.rs  cross_channel_wav.rs  force_cut_wav.rs  pipeline_wav.rs
design/: README.md
design/screens/src/: 01-design-system.html  02-panel-live.html  03-strip.html  04-capsule.html  05-summary-board.html  06-onboarding.html  07-settings.html  08-menubar.html  tokens.css
design/system/: tokens.css
docs/: PROPOSAL.md  RELEASE.md
scripts/: color-guard.sh  count-livecap-windows.swift  dev-sign.sh  no-stub-gate.sh
scripts/fixtures/: no-stub-selftest.txt
scripts/poc/: translate-poc.mjs
scripts/poc/fixtures/: fomc-20260429.txt
src/: app-settings.ts  bootstrap.ts  clock.ts  dashboard.ts  defaults.ts  feed-coalescer.ts  feed-state.ts  icons.ts  languages.ts  main.ts  onboarding.ts  protocol.ts  review.ts  session-scope.ts  settings-sheet.ts  styles.css  summary-strip.ts  ui-heartbeat.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  config.rs  dashboard.rs  dev_flags.rs  glyph.rs  lib.rs  main.rs  modes.rs  overlay.rs  permissions.rs  platform.rs  session.rs  settings.rs  snap.rs  tray.rs  ui_state.rs  util.rs
src/host/: coaching-keys.ts  detect-cli.ts  local-tier.ts  main.ts  metrics-records.ts  probe.ts  session.ts  silence.ts  start-config.ts  timeout.ts  translation-runner.ts
test/: bootstrap.test.ts  coaching-keys.test.ts  custom-endpoint-notice.test.ts  dashboard-coaching.test.ts  dashboard-lazy.test.ts  dashboard.test.ts  feed-coalescer.test.ts  feed-state.test.ts  host-timeout.test.ts  languages.test.ts  metrics-records.test.ts  recording-survives.test.ts  review-coaching.test.ts  session-accounting.test.ts  session-language.test.ts  session-reset.test.ts  session-retranslate.test.ts  shimmer-cap.test.ts  silence.test.ts  start-config.test.ts  stt-model.test.ts  summary-strip.test.ts  translation-runner.test.ts
