[package]
name = "livecap-app"
version = "0.1.0"
description = "LiveCap — live captions & translation overlay"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "livecap_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.32.0", features = ["sync", "time"] }
livecap-core = { path = "../crates/livecap-core" }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
  "NSWindow",
  "NSResponder",
  "NSGraphics",
] }
window-vibrancy = "0.6"
