[package]
name = "livecap-core"
version = "0.1.0"
description = "LiveCap core: audio capture, VAD, on-device STT (no UI, no Tauri)"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Capture/VAD/STT core derived from Meetily (MIT) — see NOTICE at the repo root.
# Dependency versions/revs are pinned to match Meetily's known-good set
# (frontend/src-tauri/Cargo.toml at Zackriya-Solutions/meetily).

# Manual GPU acceleration options for non-macOS targets (same passthroughs as
# Meetily). On macOS, Metal + CoreML are always enabled.
[features]
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
hipblas = ["whisper-rs/hipblas"]

[dependencies]
anyhow = "1.0"
log = "0.4"
thiserror = "2.0.16"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
rubato = "0.15.0"
ringbuf = "0.4.8"
# WAV encode/decode. Runtime use is the gated #64 bleed debug dump (off unless
# LIVECAP_BLEED_DUMP_DIR is set); also used by the integration tests.
hound = "3.5"
# cpal is patched to the same git rev Meetily pins (see [patch.crates-io] in the
# workspace root Cargo.toml).
cpal = "0.15.3"
silero_rs = { git = "https://github.com/emotechlab/silero-rs", rev = "26a6460", package = "silero" }

# macOS: Metal GPU + CoreML acceleration for whisper.cpp, and the objc2
# framework bindings for the Core Audio system-audio process tap.
# Deviation from Meetily: Meetily uses `cidre` for the tap, but cidre's build
# script requires a full Xcode install (xcodebuild) — the objc2 crates expose
# the identical CoreAudio API surface as pure Rust bindings.
# NOTE: the `coreml` feature is intentionally NOT enabled (#141). whisper.cpp's
# CoreML encoder needs a `ggml-<model>-encoder.mlmodelc` bundle beside the model,
# which `model.rs` never downloads — so with `coreml` on, whisper.cpp attempted
# the CoreML load and fell back to Metal on EVERY transcribe. Shipping CoreML
# properly (fetch the mlmodelc for the ANE speedup) is post-MVP #164.
# `whisper-cpp-log` routes whisper.cpp/ggml C-library logs into the `log` crate
# (#141) — `log` is already a dependency, so this adds no new external dep.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api", "metal", "whisper-cpp-log"] }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-audio = "0.3"
objc2-core-audio-types = "0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api", "whisper-cpp-log"] }

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "live_caption"
